; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_bignum.c_mbedtls_mpi_write_binary.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_bignum.c_mbedtls_mpi_write_binary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64* }

@MBEDTLS_ERR_MPI_BUFFER_TOO_SMALL = common dso_local global i32 0, align 4
@ciL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbedtls_mpi_write_binary(%struct.TYPE_4__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %12 = call i64 @mbedtls_mpi_size(%struct.TYPE_4__* %11)
  store i64 %12, i64* %10, align 8
  %13 = load i64, i64* %7, align 8
  %14 = load i64, i64* %10, align 8
  %15 = icmp ult i64 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* @MBEDTLS_ERR_MPI_BUFFER_TOO_SMALL, align 4
  store i32 %17, i32* %4, align 4
  br label %53

18:                                               ; preds = %3
  %19 = load i8*, i8** %6, align 8
  %20 = load i64, i64* %7, align 8
  %21 = call i32 @memset(i8* %19, i32 0, i64 %20)
  %22 = load i64, i64* %7, align 8
  %23 = sub i64 %22, 1
  store i64 %23, i64* %8, align 8
  store i64 0, i64* %9, align 8
  br label %24

24:                                               ; preds = %45, %18
  %25 = load i64, i64* %10, align 8
  %26 = icmp ugt i64 %25, 0
  br i1 %26, label %27, label %52

27:                                               ; preds = %24
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  %30 = load i64*, i64** %29, align 8
  %31 = load i64, i64* %9, align 8
  %32 = load i64, i64* @ciL, align 8
  %33 = udiv i64 %31, %32
  %34 = getelementptr inbounds i64, i64* %30, i64 %33
  %35 = load i64, i64* %34, align 8
  %36 = load i64, i64* %9, align 8
  %37 = load i64, i64* @ciL, align 8
  %38 = urem i64 %36, %37
  %39 = shl i64 %38, 3
  %40 = lshr i64 %35, %39
  %41 = trunc i64 %40 to i8
  %42 = load i8*, i8** %6, align 8
  %43 = load i64, i64* %8, align 8
  %44 = getelementptr inbounds i8, i8* %42, i64 %43
  store i8 %41, i8* %44, align 1
  br label %45

45:                                               ; preds = %27
  %46 = load i64, i64* %8, align 8
  %47 = add i64 %46, -1
  store i64 %47, i64* %8, align 8
  %48 = load i64, i64* %9, align 8
  %49 = add i64 %48, 1
  store i64 %49, i64* %9, align 8
  %50 = load i64, i64* %10, align 8
  %51 = add i64 %50, -1
  store i64 %51, i64* %10, align 8
  br label %24

52:                                               ; preds = %24
  store i32 0, i32* %4, align 4
  br label %53

53:                                               ; preds = %52, %16
  %54 = load i32, i32* %4, align 4
  ret i32 %54
}

declare dso_local i64 @mbedtls_mpi_size(%struct.TYPE_4__*) #1

declare dso_local i32 @memset(i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
